styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scrollbar-width: thin;
    scrollbar-color: #f4f4f4 #fff;
}

body {
    font-family: 'Poppins', sans-serif;
    background-color: #f4f4f4;
}

html {
    scroll-behavior: smooth;
}


a, .button {
    transition: all 0.3s ease;
}


nav, .nav-links {
    display: flex;
}

nav {
    background-color: #fff;
    justify-content: space-around;
    align-items: center;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    position: fixed;
    height: 15vh;
    width: 100%;
    z-index: 1000;
}

.nav-links {
    gap: 2rem;
    list-style: none;
    font-size: 1.2rem;
}

.logo {
    font-size: 1.5rem;
    font-weight: 700;
    color: #333;
}

a {
    text-decoration: none;
    color: #333;
    text-decoration-color: #333;
}

a:hover {
    color: #f1356d;
    text-decoration: underline;
    text-underline-offset: 10px;
}

.logo:hover {
    color: #f1356d;
    cursor: pointer;
}


#hamburger {
    display: none;
}

.ham-menu {
    position: relative;
    display: inline-block;
}

.ham-icon {
    font-size: 1.5rem;
    color: #333;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 24px;
    width: 30px;
    cursor: pointer;
    flex-direction: column;
}

.ham-icon span {
    width: 100%;
    height: 2px;
    background-color: #333;
    transition: all 0.3s ease;
}

.menu-links {
    position: absolute;
    top: 100%;
    right: 0;
    background-color: #fff;
    max-height: 0;
    overflow: hidden;
    transition: all 0.3s ease;
    width: fit-content;
    border-radius: 0 0 10px 10px;
    margin-top: 0.5rem;
}

.menu-links a {
    display: block;
    padding: 0.5rem;
    text-align: center;
    font-size: 1rem;
    color: #333;
    text-decoration: none;
    transition: all 0.3s ease;
}

.menu-links a:hover {
    background-color: #f4f4f4;
}

.menu-links li {
    list-style: none;
}

.menu-links.open {
    max-height: 100vh;
}

.ham-icon.open span:first-child {
    transform: rotate(45deg) translate(10px, 5px);
}

.ham-icon.open span:nth-child(2) {
    opacity: 0;
}

.ham-icon.open span:last-child {
    transform: rotate(-45deg) translate(10px, -5px);
}

.btn-1 {
    background-color: #f1356d;
    color: #fff;
    padding: 0.5rem 1rem;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    font-size: 1.2rem;
    transition: all 0.3s ease;
}

.btn-1:hover {
    background-color: #333;
    color: #fff;
    transition: all 0.3s ease;
    border-radius: 20px;
}

.btn-2 {
    border: 2px solid #333;
    padding: 0.5rem 1rem;
    cursor: pointer;
    font-size: 1.2rem;
    background-color: #fff;
    transition: all 0.3s ease;
    color: #333;
    border-radius: 10px;
}

.btn-2:hover {
    background-color: #333;
    color: #fff;
    transition: all 0.3s ease;
    border-radius: 20px;
}



#profile {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height:75vh;
    padding-top: 10vh;
    background-color: #f4f4f4;
}

.section_pic-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile-pic {
    width: 260px;
    height: 260px;
    border-radius: 50%;
    object-fit: cover;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.section_text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: 2rem;
}

.section__text__p1 {
    font-size: 1.5rem;
    color: #333;
}

.title {
    font-size: 2.5rem;
    color: #333;
}

.section__test__p2 {
    font-size: 1.5rem;
    color: #333;
}

.btn-container {
    display: flex;
    gap: 1rem;
}

.social-icon {
    width: 35px;
    height: 35px;
    object-fit: cover;
    border-radius: 50%;
    margin-top: 0.5rem;
}

.social-icons {
    display: flex;
    gap: 1rem;
}

.hero-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #f4f4f4;
    gap: 1rem;
    margin-left: 2rem;
}

#about {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: #f4f4f4;
    padding: 0 2rem;
    margin-bottom: 2rem;
}

.about-details-container {
    justify-content: space-around;
    width: 65rem;
}

.about-container {
    display: flex;
    gap: 1.3rem;
    padding: 0.5rem;
    flex-direction: column;
    border-radius: 10px;
}

.details-container {
    display: flex;
    flex-direction: column;
    border: 1px solid #333;
    padding: 1rem;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: 20rem;
    align-items: center;
    font-size: 1rem;
    text-align: center;
    gap: 0.2rem;
}

.details-container:hover {
    transform:  translateY(-5px);
    transition: all 0.3s ease;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    cursor: pointer;    
}

.icon {
    width: 30px;
    height: 30px;
    object-fit: cover;
}

.about-items {
    display: flex; 
    flex-direction: row;
    align-items: center; 
    justify-content: space-between;
    margin-top: 0.5rem;
}

.about__text {
    font-size: 1.2rem;
    color: #333;
    text-align: center;
}

.arrow {
    color: #333;
    cursor: pointer;
    height: 30px;
    width: 30px;
    align-self: flex-end;
}

.arrow:hover {
    color: #f1356d;
}

.skills-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 2rem;
    gap: 1rem;
    margin-bottom: 2rem;
    width: 90rem;
    flex-wrap: wrap;
}

.skills {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1.5rem;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: 40rem;
    align-items: center;
    font-size: 1rem;
    text-align: center;
}

.skills__title {
    font-size: 1.5rem;
    color: #333;
}

.skills__items {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.skills__items p {
    padding: 0.5rem 1rem;
    border: 1px solid #333;
    border-radius: 10px;
    background-color: #fff;
    color: #333;
    font-size: 1rem;
    transition: all 0.3s ease;
}

.skills__items p:hover {
    background-color: #333;
    color: #fff;
    transition: all 0.3s ease;
    border-radius: 20px;
}



@media screen and (max-width: 768px) {
    .skills-container {
        flex-direction: column;
        align-items: center;
        gap: 2rem;
    }

    .skills {
        width: 90%;
    }
}

@media screen and (max-width: 768px) {
    .about-details-container {
        width: 90%;
    }

    .about-container {
        flex-direction: column;
        gap: 1rem;
    }

    .details-container {
        width: 90%;
    }

    .skills-container {
        width: 90%;
    }
}

@media screen and (max-width: 768px) {
    .section_pic-container {
        display: none;
    }

    .section_text {
        margin-left: 0;
    }

    .hero-container {
        margin-left: 0;
    }

    .section__text__p1 {
        font-size: 1.2rem;
    }

    .title {
        font-size: 2rem;
    }

    .section__test__p2 {
        font-size: 1.2rem;
    }

    .social-icon {
        width: 30px;
        height: 30px;
    }

    .btn-container {
        flex-direction: column;
        gap: 1rem;
    }

    .btn-1 {
        padding: 0.5rem 2rem;
    }

    .btn-2 {
        padding: 0.5rem 2rem;
    }

    .social-icons {
        gap: 0.5rem;
    }

    .ham-menu {
        display: block;
    }

    .nav-links {
        display: none;
    }

    .nav-links.open {
        display: flex;
        flex-direction: column;
        gap: 1rem;
    }

    .menu-links {
        position: absolute;
        top: 100%;
        right: 0;
        background-color: #fff;
        max-height: 0;
        overflow: hidden;
        transition: all 0.3s ease;
        width: fit-content;
        border-radius: 0 0 10px 10px;
        margin-top: 0.5rem;
    }

    .menu-links a {
        display: block;
        padding: 0.5rem;
        text-align: center;
        font-size: 1rem;
        color: #333;
        text-decoration: none;
        transition: all 0.3s ease;
    }

    .menu-links a:hover {
        background-color: #f4f4f4;
    }

    .menu-links li {
        list-style: none;
    }

    .menu-links.open {
        max-height: 100vh;
    }

    .ham-icon {
        font-size: 1.5rem;
        color: #333;
        cursor: pointer;
        display: flex;
        justify-content: space-between;
        align-items: center;
        height:
        24px;
        width: 30px;
        cursor: pointer;
        flex-direction: column;
    }
}

@media screen and (max-width: 768px) {
    .about-items {
        flex-direction: column;
        gap: 1rem;
    }

    .about__text {
        font-size: 1rem;
    }

    .arrow {
        height: 20px;
        width: 20px;
    }
}

@media screen and (max-width: 768px) {
    .skills__items p {
        padding: 0.5rem 0.5rem;
    }
    
}

@media screen and (max-width: 768px) {
    .skills__title {
        font-size: 1.2rem;
    }
}

@media screen and (max-width: 768px) {
    .skills__items {
        gap: 0.5rem;
    }
}

@media screen and (max-width: 768px) {
    .skills__items p {
        font-size: 0.8rem;
    }
}

@media screen and (max-width: 768px) {
    .details-container {
        padding: 0.5rem;
    }
}

@media screen and (max-width: 768px) {
    .details-container {
        font-size: 0.8rem;
    }
}

@media screen and (max-width: 768px) {
    .details-container {
        width: 90%;
    }
}

@media screen and (max-width: 768px) {
    .about__text {
        font-size: 1rem;
    }
}

